Artist menu with too much height (fixed)

--- a/css/main.css
+++ b/css/main.css
@@ -517,7 +517,7 @@ a {
   z-index: 1;
   position: absolute;
   left: 0;
-  top: 110px;
+  top: 80px;
   width: 126px;
   opacity: 0.9;
   background-color: #222326;
