--- a/sass/_artistmenu.scss
+++ b/sass/_artistmenu.scss
@@ -2,7 +2,7 @@
   z-index: 1;
   position: absolute;
   left: 0;
-  top: $header-height + 50px;
+  top: $header-height + 20px;
 
   width: 126px;
 
